# cpp-practice

./: .gitignore  ;  CMakeLists.txt  README.md  \  a.out  begin.cpp  begin.hpp  boolean.cpp  boolean.hpp  case.hpp  for.hpp  if.hpp  integer.hpp  minmax.hpp  proc.hpp  series.hpp
begin/: begin16.cpp  begin27.cpp  begin29.cpp  begin6.cpp  begin8.cpp
boolean/: boolean11.cpp  boolean20.cpp  boolean29.cpp  boolean35.cpp
case/: case10.cpp  case16.cpp  case2.cpp
for/: for10.cpp  for17.cpp
if/: if16.cpp  if24.cpp  if5.cpp  if7.cpp
integer/: integer1.cpp  integer12.cpp  integer22.cpp  integer28.cpp
minmax/: a.out  minmax3.cpp
proc/: proc26.cpp  proc3.cpp  proc50.cpp  proc56.cpp
series/: series8.cpp
solutions/: begin.hpp  boolean.hpp  case.hpp  for.hpp  if.hpp  integer.hpp  minmax.hpp  proc.hpp  series.hpp  structs.hpp  while.hpp
tasks/begin/begin1/: begin1  begin1.cpp
tasks/begin/begin16/: begin16  begin16.cpp
tasks/begin/begin27/: begin27  begin27.cpp
tasks/begin/begin29/: begin29  begin29.cpp
tasks/boolean/boolean11/: boolean11  boolean11.cpp
tasks/boolean/boolean20/: boolean20  boolean20.cpp
tasks/boolean/boolean29/: boolean29  boolean29.cpp
tasks/boolean/boolean35/: boolean35  boolean35.cpp
tasks/case/case16/: case16  case16.cpp
temp/: begin.cpp  boolean.cpp  case.cpp  for.cpp  if.cpp  integer.cpp  minmax.cpp  proc.cpp  series.cpp  while.cpp
temp/series/: series20.cpp  series8.cpp
temp/tests/: begin.cc  for.cc  if.cc  proc.cc  series.cc  tests.cc
tests/: begin.cc  boolean.cc  case.cc  integer.cc  minmax.cc  while.cc
(+48 files in other folders)
